--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<div class="mxgraph" style="max-width:100%;border:1px solid transparent;" data-mxgraph="{&quot;highlight&quot;:&quot;#0000ff&quot;,&quot;nav&quot;:true,&quot;resize&quot;:true,&quot;toolbar&quot;:&quot;zoom layers tags lightbox&quot;,&quot;edit&quot;:&quot;_blank&quot;,&quot;url&quot;:&quot;https://raw.githubusercontent.com/ClaytonAstrom/claytonastrom.github.io/main/index.drawio&quot;}"></div>
-<script type="text/javascript" src="https://viewer.diagrams.net/embed2.js?&fetch=https%3A%2F%2Fraw.githubusercontent.com%2FClaytonAstrom%2Fclaytonastrom.github.io%2Fmain%2Findex.drawio"></script>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to drawio</title>
+<meta http-equiv="refresh" content="0; URL=https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=index.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FClaytonAstrom%2Fclaytonastrom.github.io%2Fmain%2Findex.drawio">
