--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to drawio</title>
-<meta http-equiv="refresh" content="0; URL=https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=index.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FClaytonAstrom%2Fclaytonastrom.github.io%2Fmain%2Findex.drawio">
+<meta http-equiv="refresh" content="0; URL=https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&page-id=CHRfpnqsCdEV9Wg7y6lV&title=index.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FClaytonAstrom%2Fclaytonastrom.github.io%2Fmain%2Findex.drawio">
